test/negative/after01.cfr
// Test for negative after constraint

a
 b ?
  c ?
  d ?
  [ after d ]


